--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -38,9 +38,16 @@
             android:layout_height="wrap_content"
             android:maxLines="3"
             android:paddingRight="16dp"
-            android:textColor="@color/colorGreyLight"/>
+            android:textColor="@color/colorGreyLight"
+            android:text="gfxcgdgcgfgc"/>
+
     </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="35dp"
@@ -61,6 +68,14 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:text="5.0"/>
+    </LinearLayout>
+        <ImageView
+            android:id="@+id/posterImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/description"
+            android:src="@mipmap/ic_launcher"
+            />
     </LinearLayout>
 
 </LinearLayout>
